--- a/11-test-homework/css/style.css
+++ b/11-test-homework/css/style.css
@@ -38,3 +38,16 @@
     border-top: 2px solid rgb(49, 48, 48);
     
 }
+.btn-home{
+    background: none;
+    border: none;
+    width: 30px;
+    height: 30px;
+}
+.top-0{
+    top: 30% !important;
+}
+.btn-home:hover{
+    background:none;
+   
+}
