--- a/09-test-homework/css/style.css
+++ b/09-test-homework/css/style.css
@@ -318,13 +318,13 @@
   margin-bottom: 54px;
   text-align: center;
 }
-/*
+
 .feauture-list{
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-*/
+
 .feautures-list p {
   font-weight: 400;
   font-size: 16px;
@@ -334,16 +334,19 @@
 }
 .feautures-list-first {
   display: flex;
+  justify-content: center;
   gap: 85px;
   padding-bottom: 45px;
 }
 .feautures-list-second {
   display: flex;
+  justify-content: center;
   gap: 85px;
   padding-bottom: 45px;
 }
 .feautures-list-third {
   display: flex;
+  justify-content: center;
   gap: 85px;
   padding-bottom: 45px;
 }
