--- a/09-test-homework/css/style.css
+++ b/09-test-homework/css/style.css
@@ -202,6 +202,8 @@
     object-fit: cover;
   }
 }
+/*---------------------------------------------------------------*/
+
 .interface {
   background-image: url(../img/bgd.png);
   background-repeat: no-repeat;
@@ -305,6 +307,8 @@
     left: -30%;
   }
 }
+
+/*--------------------------------------------------------------------------*/
 .feautures {
   
   background: #00adee;
@@ -408,7 +412,7 @@
 
 }
 
-
+/*------------------------------------------------*/
 
 
 .users {
@@ -533,6 +537,7 @@ color: #333333;
         right: 24%;
     }
 }
+/*-----------------------------------------------------------------------*/
 .logo{
     background-color: #FAFAFA;
     padding: 57px 169px 68px 169px;
@@ -559,6 +564,7 @@ color: #333333;
     }
    
 }
+/*---------------------------------------------------*/
 .team{
     display: flex;
     
@@ -600,7 +606,7 @@ margin-bottom: 38px;
     text-align: center;
 }
 
-
+/*--------------------------------------------------------------*/
 }
 .footer{
     background: #00ADEE;
