--- a/12-test-homework/scss/style.scss
+++ b/12-test-homework/scss/style.scss
@@ -51,10 +51,10 @@ border-radius: 2px;
     max-width: 100%;
     max-height: auto;
     overflow-x: hidden;
-    background-image: url(../img/designer_1.png),url(../img/_footer.png) ;
+    background-image: url(../img/designer_1.png), url(../img/Rectangle.png) ;
     background-position: top right , bottom center;
     background-repeat: no-repeat no-repeat ;
-    background-size: auto , 2500px 940px   ;
+    background-size: auto , 500px 940px   ;
     position: relative ;
     font-family: Roboto;
     padding-left: 165px;
